--- a/mkdocs_uppmax/home.html
+++ b/mkdocs_uppmax/home.html
@@ -31,12 +31,12 @@
     }
 
     /* Hide navigation */
-    @media screen and (min-width: 76.25em) {
+/*    @media screen and (min-width: 76.25em) {
       .md-sidebar--primary {
         display: none;
       }
     }
-
+*/
   </style>
 
   <section class="tx-container">
